--- a/templates/landing/index.html.twig
+++ b/templates/landing/index.html.twig
@@ -76,11 +76,10 @@
                 <div class="col-sm-12 col-md-12 col-lg-6 about-left-side">
                     <h3 class="title-about">SOMOS <strong>FACTURA FÁCIL</strong></h3> <br>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia doloribus harum aspernatur repellendus obcaecati et saepe aliquam perferendis eum architecto,
-                     dolores quod quas ad quibusdam sequi labore. Nisi ab fuga eos facere. </p>
-                    <hr>
                     <p>Somos expertos en desarrollo de páginas web, aparte de poseer nuestro
-                                propio programa de facturación.</p>
+                                propio programa de facturación. </p>
+                    <hr>
+                    <p>Factura Fácil es solo un proyecto de clase, una pequeña muestra de nuestro gran potencial.</p>
                 </div>
                 <div class="col-md-12 col-lg-6 about-right">
                     <div class="about-right-side">
@@ -91,48 +90,7 @@
         </div>
     </section>
 
-    <section id="welcome" class="welcome-area ptb-80 bg-f6f6f6">
-        <div class="container">
-            <div class="section-title">
-                <h4>Usa Factura Fácil</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                    Laborum eos ducimus expedita ex repudiandae suscipit pariatur aut non vero excepturi?</p>
-            </div>
-
-            <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-box">
-                        <i class="fa fa-laptop icon"></i>
-                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, assumenda expedita saepe minus rem nam maxime.</p>
-                        <a href="#about" title="Read More" class="link-btn"><i class="fa fa-arrow-right"></i></a>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-box">
-                        <i class="fa fa-pencil-square-o icon"></i>
-                        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                        Non, ea obcaecati! Quaerat reiciendis, cum dicta labore officia magnam quo adipisci.</p>
-                        <a href="#about" title="Read More" class="link-btn"><i class="fa fa-arrow-right"></i></a>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0">
-                    <div class="single-box">
-                        <i class="fa fa-archive icon"></i>
-                        <h3>Lorem ipsum dolor sit.</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum eligendi hic perferendis
-                         quae aspernatur inventore vero eaque velit optio? Deserunt, suscipit!</p>
-                        <a href="#about" title="Read More" class="link-btn"><i class="fa fa-arrow-right"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="about" class="about-area ptb-80">
+    <section id="about" class="about-area ptb-80 bg-f6f6f6">
         <div class="container">
             <div class="section-title">
                 <h2>Para quien esta pensado <span>Factura Fácil</span></h2>
@@ -166,7 +124,7 @@
         </div>
     </section>
 
-    <section id="contact" class="contact-area ptb-80 bg-f6f6f6">
+    <section id="contact" class="contact-area ptb-80">
         <div class="container">
             <div class="section-title">
                 <h4>Contacta con nosotros</h4>
