--- a/templates/form/invoice_form.html.twig
+++ b/templates/form/invoice_form.html.twig
@@ -39,9 +39,12 @@
                                             </div>
                                             <div class="col-sm-6 col-md-5 col-lg-4">
                                                 <div>
-                                                    {% if last_date is defined %}
+                                                    {% if last_date is defined and last_date != null %}
                                                         <label classs="control-label">Anterior factura - {{ last_date|date("d/m/Y") }}</label>
                                                         <input id="last-date" type="hidden" value="{{ last_date|date("m/d/Y") }}">
+                                                    {% else %}
+                                                        <label classs="control-label" id="actual"></label>
+                                                        <input id="last-date" class="actual-date" type="hidden" value="">
                                                     {% endif %}
                                                 </div>
                                                 <div class="form-group">
