--- a/templates/profile/profile.html.twig
+++ b/templates/profile/profile.html.twig
@@ -114,4 +114,9 @@
         </div>
     </div>
 
+    {% block javascripts %}
+        {{ parent() }}
+        <script src="{{ asset("js/profile.js") }}"></script>
+    {% endblock %}
+
 {% endblock %}
