--- a/templates/bill/index.html.twig
+++ b/templates/bill/index.html.twig
@@ -22,126 +22,138 @@
             <div class="col-md-9 col-lg-10">
                 <div class="container main-container">
                     <div class="row flex-xl-nowrap">
-                        <div class="panel panel-table">
+                        <div class="panel">
                             <div class="panel-heading">
                                 <h3>Facturas</h3>
                                 <a href="{{ path('addNewBill', {id:company_id}) }}"><button><i class="fas fa-plus"></i></button></a>
                             </div>
                             <div class="panel-search">
-                                <div class="search-forms">
-                                    <div class="search-form search-number-bill">
-                                        <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchNumberBill">
-                                            <div class="form-group">
-                                                <label class="control-label" for="numberBill">Número de Factura</label>
-                                                <input class="form-control" type="text" name="numberBill" id="numberBill">
+                                <div class="container-fluid">
+                                    <div class="row">
+                                        <div class="col-sm-9 col-md-6 col-lg-5 col-xl-4">
+                                            <div class="search-forms">
+                                                <div class="search-form search-number-bill">
+                                                    <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchNumberBill">
+                                                        <div class="form-group">
+                                                            <label class="control-label" for="numberBill">Número de Factura</label>
+                                                            <input class="form-control" type="text" name="numberBill" id="numberBill">
+                                                        </div>
+                                                        <div class="form-actions">
+                                                            <button class="btn btn-primary" type="submit">Buscar</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                                <div class="search-form search-description">
+                                                    <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchDescription">
+                                                        <div class="form-group">
+                                                            <label class="control-label" for="description">Descripción de la Factura</label>
+                                                            <input class="form-control" type="text" name="description" id="description">
+                                                        </div>
+                                                        <div class="form-actions">
+                                                            <button class="btn btn-primary" type="submit">Buscar</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                                <div class="search-form search-client">
+                                                    <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchClient">
+                                                        <div class="form-group">
+                                                            <label class="control-label" for="client">Cliente de la Factura</label>
+                                                            <input class="form-control" type="text" name="client" id="client">
+                                                        </div>
+                                                        <div class="form-actions">
+                                                            <button class="btn btn-primary" type="submit">Buscar</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                                <div class="search-form search-date">
+                                                    <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchDate">
+                                                        <div class="form-group">
+                                                            <label class="control-label" for="start-date">Fecha Inicio</label>
+                                                            <input class="form-control" type="Date" name="start-date" id="start-date">
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <label class="control-label" for="end-date">Fecha Fin</label>
+                                                            <input class="form-control" type="Date" name="end-date" id="end-date">
+                                                        </div>
+                                                        <div class="form-actions">
+                                                            <button class="btn btn-primary" type="submit">Buscar</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
                                             </div>
-                                            <div class="form-actions">
-                                                <button class="btn btn-primary" type="submit">Buscar</button>
+                                        </div>
+                                        <div class="col-9 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                                            <div class="form-group select-search">
+                                                <label class="control-label" for="select-search">Buscar por</label>
+                                                <select class="form-control rounded-sm" id="select-search">
+                                                    <option value="1">Nº de factura</option>
+                                                    <option value="2">Descripción de la Factura</option>
+                                                    <option value="3">Cliente de la Factura</option>
+                                                    <option value="4">Fecha</option>
+                                                </select>
                                             </div>
-                                        </form>
-                                    </div>
-                                    <div class="search-form search-description">
-                                        <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchDescription">
-                                            <div class="form-group">
-                                                <label class="control-label" for="description">Descripción de la Factura</label>
-                                                <input class="form-control" type="text" name="description" id="description">
-                                            </div>
-                                            <div class="form-actions">
-                                                <button class="btn btn-primary" type="submit">Buscar</button>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <div class="search-form search-client">
-                                        <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchClient">
-                                            <div class="form-group">
-                                                <label class="control-label" for="client">Cliente de la Factura</label>
-                                                <input class="form-control" type="text" name="client" id="client">
-                                            </div>
-                                            <div class="form-actions">
-                                                <button class="btn btn-primary" type="submit">Buscar</button>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <div class="search-form search-date">
-                                        <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchDate">
-                                            <div class="form-group">
-                                                <label class="control-label" for="start-date">Fecha Inicio</label>
-                                                <input class="form-control" type="Date" name="start-date" id="start-date">
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="control-label" for="end-date">Fecha Fin</label>
-                                                <input class="form-control" type="Date" name="end-date" id="end-date">
-                                            </div>
-                                            <div class="form-actions">
-                                                <button class="btn btn-primary" type="submit">Buscar</button>
-                                            </div>
-                                        </form>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="form-group select-search">
-                                    <label class="control-label" for="select-search">Buscar por</label>
-                                    <select class="form-control rounded-sm" id="select-search">
-                                        <option value="1">Nº de factura</option>
-                                        <option value="2">Descripción de la Factura</option>
-                                        <option value="3">Cliente de la Factura</option>
-                                        <option value="4">Fecha</option>
-                                    </select>
-                                </div>
+                                
+                                
                             </div>
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">Nº Factura</th>
-                                        <th scope="col">Fecha</th>
-                                        <th scope="col">Importe I.V.A.</th>
-                                        <th scope="col">Importe sin I.V.A.</th>
-                                        <th scope="col">Importe Total</th>
-                                        <th width="75px" scope="col">PDF</th>
-                                        <th class="th-lit" width="75px" scope="col"><div>Editar/ Eliminar</div></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% set counter = 0 %}
-                                    {% if total == true %}
-                                        {% set total_iva = 0 %}
-                                        {% set total_without_iva = 0 %}
-                                        {% set total_amount = 0 %}
-                                    {% endif %}
-                                    {% for bill in bills %}
-                                        {% set counter = counter + 1 %}
-                                        {% if total == true %}
-                                            {% set total_without_iva = total_without_iva + bill.amountIVA %}
-                                            {% set total_without_iva = total_without_iva + bill.amountWithoutIVA %}
-                                            {% set total_amount = total_amount + bill.totalInvoiceAmount %}
-                                        {% endif %}
+                            <div class="table-responsive">
+                                <table class="table">
+                                    <thead>
                                         <tr>
-                                            <td>{{ bill.numberBill }}</td>
-                                            <td>{{ bill.dateBill|date("d/m/Y") }}</td>
-                                            <td>{{ bill.amountIVA }}€</td>
-                                            <td>{{ bill.amountWithoutIVA }}€</td>
-                                            <td>{{ bill.totalInvoiceAmount }}€</td>
-                                            <td><a href="{{ path('showPdfBill', {id: bill.id}) }}" target="_blank" class="show-pdf"><button name="show" class="show"><i class="fas fa-file-pdf"></i></button></a></td>
-                                            {% if counter < 2 %}
-                                                <td>
-                                                    <div class="edit-delete">
-                                                        <a href="{{ path('editBill', {id: company_id, invoice_id: bill.id}) }}"><button name="edit" class="edit-lit">Editar</button></a>
-                                                        <a href="{{ path('deleteBill', {id: bill.id}) }}"><button name="delete" class="delete-lit">Eliminar</button></a>
-                                                    </div>
-                                                </td>
+                                            <th scope="col">Nº Factura</th>
+                                            <th scope="col">Fecha</th>
+                                            <th scope="col">Importe I.V.A.</th>
+                                            <th scope="col">Importe sin I.V.A.</th>
+                                            <th scope="col">Importe Total</th>
+                                            <th width="75px" scope="col">PDF</th>
+                                            <th class="th-lit" width="75px" scope="col"><div>Editar/ Eliminar</div></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% set counter = 0 %}
+                                        {% if total == true %}
+                                            {% set total_iva = 0 %}
+                                            {% set total_without_iva = 0 %}
+                                            {% set total_amount = 0 %}
+                                        {% endif %}
+                                        {% for bill in bills %}
+                                            {% set counter = counter + 1 %}
+                                            {% if total == true %}
+                                                {% set total_without_iva = total_without_iva + bill.amountIVA %}
+                                                {% set total_without_iva = total_without_iva + bill.amountWithoutIVA %}
+                                                {% set total_amount = total_amount + bill.totalInvoiceAmount %}
                                             {% endif %}
-                                        </tr>
-                                    {% endfor %}
-                                    {% if total == true %}
-                                        <tr class="total">
-                                            <th>Total</th>
-                                            <td></td>
-                                            <td>{{ total_without_iva }}€</td>
-                                            <td>{{ total_without_iva }}€</td>
-                                            <th>{{ total_amount }}€</th>
-                                        </tr>
-                                    {% endif %}
-                                </tbody>
-                            </table>
+                                            <tr>
+                                                <td>{{ bill.numberBill }}</td>
+                                                <td>{{ bill.dateBill|date("d/m/Y") }}</td>
+                                                <td>{{ bill.amountIVA }}€</td>
+                                                <td>{{ bill.amountWithoutIVA }}€</td>
+                                                <td>{{ bill.totalInvoiceAmount }}€</td>
+                                                <td><a href="{{ path('showPdfBill', {id: bill.id}) }}" target="_blank" class="show-pdf"><button name="show" class="show"><i class="fas fa-file-pdf"></i></button></a></td>
+                                                {% if counter < 2 %}
+                                                    <td>
+                                                        <div class="edit-delete">
+                                                            <a href="{{ path('editBill', {id: company_id, invoice_id: bill.id}) }}"><button name="edit" class="edit-lit">Editar</button></a>
+                                                            <a href="{{ path('deleteBill', {id: bill.id}) }}"><button name="delete" class="delete-lit">Eliminar</button></a>
+                                                        </div>
+                                                    </td>
+                                                {% endif %}
+                                            </tr>
+                                        {% endfor %}
+                                        {% if total == true %}
+                                            <tr class="total">
+                                                <th>Total</th>
+                                                <td></td>
+                                                <td>{{ total_without_iva }}€</td>
+                                                <td>{{ total_without_iva }}€</td>
+                                                <th>{{ total_amount }}€</th>
+                                            </tr>
+                                        {% endif %}
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
