--- a/templates/form/invoice_form.html.twig
+++ b/templates/form/invoice_form.html.twig
@@ -142,7 +142,7 @@
                                                                 <th scope="row">1</th>
                                                                 <td>
                                                                     <select id="add_new_bill_billLines_0_product" name="add_new_bill[billLines][0][product]" class="form-control rounded-sm">
-                                                                        <option value="null">----------</option>
+                                                                        <option value>----------</option>
                                                                         {% for product in products %}
                                                                             <option value="{{ product.id }}">{{ product.name }}</option>
                                                                         {% endfor %}
