--- a/templates/menu-company.html.twig
+++ b/templates/menu-company.html.twig
@@ -12,6 +12,9 @@
                 <li id="option-invoice">
                     <a href="{{ path('bills', {id:company_id}) }}"><span>Facturas</span> <i class="fas fa-file-invoice"></i></a>
                 </li>
+                <li id="option-budgets">
+                    <a href="{{ path('budgets', {id:company_id}) }}"><span>Presupuestos</span> <i class="fas fa-file-invoice-dollar"></i></a>
+                </li>
                 <li id="option-clients">
                     <a href="{{ path('client', {id:company_id}) }}"><span>Clientes</span> <i class="fas fa-users"></i></a>
                 </li>
